--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    
+    provider: ^4.3.2+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
